--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "DANUWA-MD",
+  "name": "XP HUNTER-MRT",
   "version": "1.0.0",
   "description": "A Powerfull Whatsapp Bot",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name DANUWA-MD",
-    "stop": "pm2 stop DANUWA-MD",
-    "restart": "pm2 restart DANUWA-MD"
+    "start": "pm2 start index.js --deep-monitoring --attach --name XP HUNTER-MRT",
+    "stop": "pm2 stop XP HUNTER-MRT",
+    "restart": "pm2 restart XP HUNTER-MRT"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.16",
+    "@whiskeysockets/baileys": "7.0.0-rc.3",
     "api-dylux": "^1.8.5",
     "axios": "^1.9.0",
     "browser-id3-writer": "^6.2.0",
